training xgb ResNet with MLflow

--- a/code/modeling_ResNet_xgb.ipynb
+++ b/code/modeling_ResNet_xgb.ipynb
@@ -714,10 +714,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "89dfc04b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tracking URI: file:///home/ubuntu/mlruns\n"
+     ]
+    }
+   ],
    "source": [
     "import pathlib, mlflow\n",
     "mlruns_dir = pathlib.Path(\"/home/ubuntu/mlruns\")  # usa ruta absoluta y fija\n",
@@ -727,10 +735,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "9b9fb9c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting xgboost\n",
+      "  Downloading xgboost-3.0.5-py3-none-manylinux_2_28_x86_64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: numpy in /home/ubuntu/env-cancer/lib/python3.12/site-packages (from xgboost) (2.3.2)\n",
+      "Collecting nvidia-nccl-cu12 (from xgboost)\n",
+      "  Downloading nvidia_nccl_cu12-2.27.7-py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (2.0 kB)\n",
+      "Requirement already satisfied: scipy in /home/ubuntu/env-cancer/lib/python3.12/site-packages (from xgboost) (1.16.1)\n",
+      "Downloading xgboost-3.0.5-py3-none-manylinux_2_28_x86_64.whl (94.9 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m94.9/94.9 MB\u001b[0m \u001b[31m31.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading nvidia_nccl_cu12-2.27.7-py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (322.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m322.5/322.5 MB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: nvidia-nccl-cu12, xgboost\n",
+      "Successfully installed nvidia-nccl-cu12-2.27.7 xgboost-3.0.5\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "fa19081d-361a-43bf-b377-53165713a5e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 1 folds for each of 2 candidates, totalling 2 fits\n",
+      "[CV] END ........................................max_depth=3; total time=  31.9s\n",
+      "[CV] END ........................................max_depth=6; total time=  44.6s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/09/05 22:38:01 INFO mlflow.sklearn.utils: Logging the 5 best runs, no runs will be omitted.\n",
+      "2025/09/05 22:38:01 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n"
+     ]
+    }
+   ],
    "source": [
     "# ---- Imports ----\n",
     "import numpy as np\n",
@@ -750,13 +806,13 @@
     "mlflow.sklearn.autolog(log_models=False)   # dejamos el log manual del modelo al final\n",
     "\n",
     "# ---------- Datos y split (train + val para GridSearchCV con PredefinedSplit) ----------\n",
-    "embeddings = pickle.load(open('../data/data_emb_ResNet.pk', 'rb'))\n",
+    "embeddings = pickle.load(open('../code/data_emb_ResNet.pk', 'rb'))\n",
     "X_train_emb, X_val_emb, X_test_emb = embeddings\n",
-    "X_train_emb = X_train_emb['pool']\n",
-    "X_val_emb = X_val_emb['pool']\n",
-    "X_test_emb = X_test_emb['pool']\n",
+    "# X_train_emb = X_train_emb['pool']\n",
+    "# X_val_emb = X_val_emb['pool']\n",
+    "# X_test_emb = X_test_emb['pool']\n",
     "\n",
-    "labels = pickle.load(open('../data/labels_train_val_test.pk', 'rb'))\n",
+    "labels = pickle.load(open('../code/labels_train_val_test.pk', 'rb'))\n",
     "y_train,y_val, y_test = labels\n",
     "\n",
     "\n",
@@ -777,7 +833,7 @@
     "spw = float(n_neg) / float(n_pos)  # scale_pos_weight\n",
     "\n",
     "# ---------- Hiperparámetros base ----------\n",
-    "n_estimators     = 100\n",
+    "n_estimators     = 130\n",
     "subsample        = 0.7\n",
     "reg_alpha        = 1.0\n",
     "min_child_weight = 3.0\n",
